Puppet OpenStack ocata release
Change-Id: Iec8fa9177346390907658edc04870e3ba29e87d9

--- a/deliverables/ocata/puppet-barbican.yaml
+++ b/deliverables/ocata/puppet-barbican.yaml
@@ -28,3 +28,7 @@ releases:
     projects:
       - repo: openstack/puppet-barbican
         hash: 02d93cb084d54d2cf123c62d7f2189334340d511
+  - projects:
+      - hash: f037c29ce6614de3e93ddd842e1622abc92b4b3b
+        repo: openstack/puppet-barbican
+    version: 10.4.0
