--- a/deliverables/ocata/puppet-ceilometer.yaml
+++ b/deliverables/ocata/puppet-ceilometer.yaml
@@ -28,3 +28,7 @@ releases:
     projects:
       - repo: openstack/puppet-ceilometer
         hash: c36add994df56f8268792cdd39bffec3694126e9
+  - projects:
+      - hash: e6c9deba0986721725e59abab06b71e960a9d2a7
+        repo: openstack/puppet-ceilometer
+    version: 10.4.0
