--- a/deliverables/ocata/puppet-cinder.yaml
+++ b/deliverables/ocata/puppet-cinder.yaml
@@ -28,3 +28,7 @@ releases:
     projects:
       - repo: openstack/puppet-cinder
         hash: 9d6ccfde23eb494fb0d01493e92fc7fcc2183934
+  - projects:
+      - hash: 119260eff001aa95479450eaea5c6950c2a7521b
+        repo: openstack/puppet-cinder
+    version: 10.4.0
