--- a/deliverables/ocata/puppet-congress.yaml
+++ b/deliverables/ocata/puppet-congress.yaml
@@ -16,3 +16,7 @@ releases:
     projects:
       - repo: openstack/puppet-congress
         hash: 339fcee01e4616209a3db254c7a38fedeeaddb3c
+  - projects:
+      - hash: 8e739386699ea3df9e0a80adfedd918248b9b1cc
+        repo: openstack/puppet-congress
+    version: 10.4.0
