--- a/deliverables/ocata/puppet-designate.yaml
+++ b/deliverables/ocata/puppet-designate.yaml
@@ -28,3 +28,7 @@ releases:
     projects:
       - repo: openstack/puppet-designate
         hash: 7536b6b992c443594f03e4201a3f1d9f42ad57b4
+  - projects:
+      - hash: 5614b6026b71ad4f21431774088f7a498fd43c27
+        repo: openstack/puppet-designate
+    version: 10.4.0
