--- a/deliverables/ocata/puppet-glance.yaml
+++ b/deliverables/ocata/puppet-glance.yaml
@@ -28,3 +28,7 @@ releases:
     projects:
       - repo: openstack/puppet-glance
         hash: 12ad1a4578b4e5cbcb1fd41cce08e758231efd62
+  - projects:
+      - hash: 13d2614089e990921b3b2b84ad34fcb8df107a51
+        repo: openstack/puppet-glance
+    version: 10.4.0
