--- a/deliverables/ocata/puppet-gnocchi.yaml
+++ b/deliverables/ocata/puppet-gnocchi.yaml
@@ -28,3 +28,7 @@ releases:
     projects:
       - repo: openstack/puppet-gnocchi
         hash: c2ac6f23df2aefb8900db65148dd7a08b2dd89a8
+  - projects:
+      - hash: 3e8a88fff9d40824b3f0d5c159d6b96c5fed0064
+        repo: openstack/puppet-gnocchi
+    version: 10.4.0
