--- a/deliverables/ocata/puppet-heat.yaml
+++ b/deliverables/ocata/puppet-heat.yaml
@@ -28,3 +28,7 @@ releases:
     projects:
       - repo: openstack/puppet-heat
         hash: f0c8277b2b650b6fdede590ca7a667eea5e40133
+  - projects:
+      - hash: 04616f56931b0a5510db6bdb3118e0529a06fda9
+        repo: openstack/puppet-heat
+    version: 10.4.0
