--- a/deliverables/ocata/puppet-horizon.yaml
+++ b/deliverables/ocata/puppet-horizon.yaml
@@ -36,3 +36,7 @@ releases:
       - hash: 45659830fb3d25efaf83c71f0f96322cc9ee30c5
         repo: openstack/puppet-horizon
     version: 10.5.0
+  - projects:
+      - hash: e3b6092acf6f82aacab249520bc8884d985077c7
+        repo: openstack/puppet-horizon
+    version: 10.6.0
