--- a/deliverables/ocata/puppet-ironic.yaml
+++ b/deliverables/ocata/puppet-ironic.yaml
@@ -32,3 +32,7 @@ releases:
     projects:
       - repo: openstack/puppet-ironic
         hash: ee09d11edd835cead347909764c5304252236941
+  - projects:
+      - hash: d903c261a6871578737abd72f7af7cb92a4b98cc
+        repo: openstack/puppet-ironic
+    version: 10.5.0
