--- a/deliverables/ocata/puppet-keystone.yaml
+++ b/deliverables/ocata/puppet-keystone.yaml
@@ -28,3 +28,7 @@ releases:
     projects:
       - repo: openstack/puppet-keystone
         hash: 66a76064e26a8f7a9bec99e314eefb3581c8b112
+  - projects:
+      - hash: 399001f52842fb0ac1dc51b4390a89e98e682a4c
+        repo: openstack/puppet-keystone
+    version: 10.4.0
