--- a/deliverables/ocata/puppet-mistral.yaml
+++ b/deliverables/ocata/puppet-mistral.yaml
@@ -28,3 +28,7 @@ releases:
     projects:
       - repo: openstack/puppet-mistral
         hash: fce332808e70a890aa06347d131ceffe137be3cb
+  - projects:
+      - hash: b1f754f8e5531f4dfd37218e7e9c3b9b567dde34
+        repo: openstack/puppet-mistral
+    version: 10.4.0
