--- a/deliverables/ocata/puppet-murano.yaml
+++ b/deliverables/ocata/puppet-murano.yaml
@@ -28,3 +28,7 @@ releases:
     projects:
       - repo: openstack/puppet-murano
         hash: 64fba29421fe3eaabde9685cbaac688f695a5f88
+  - projects:
+      - hash: fd61c716133cfbbdc300db140068a2ea8f2e58b8
+        repo: openstack/puppet-murano
+    version: 10.4.0
