--- a/deliverables/ocata/puppet-neutron.yaml
+++ b/deliverables/ocata/puppet-neutron.yaml
@@ -28,3 +28,7 @@ releases:
     projects:
       - repo: openstack/puppet-neutron
         hash: 073f37c02e3762e2f45832b11b92935a2b3a40a3
+  - projects:
+      - hash: 13c872f9aad20320b42ec000057aada219d2e83a
+        repo: openstack/puppet-neutron
+    version: 10.4.0
