--- a/deliverables/ocata/puppet-nova.yaml
+++ b/deliverables/ocata/puppet-nova.yaml
@@ -32,3 +32,7 @@ releases:
     projects:
       - repo: openstack/puppet-nova
         hash: 91072e14d9d373d1b702a60dc61b63913997eff4
+  - projects:
+      - hash: 5679a835c8c89df0beb952bbdae60aba04a62e11
+        repo: openstack/puppet-nova
+    version: 10.5.0
