--- a/deliverables/ocata/puppet-octavia.yaml
+++ b/deliverables/ocata/puppet-octavia.yaml
@@ -28,3 +28,7 @@ releases:
     projects:
       - repo: openstack/puppet-octavia
         hash: 6a6a64ca57f6fc9eb7dd975047f2afcc70144265
+  - projects:
+      - hash: 926aa62d7889fe0c56a55fc3747750b3c5397b2d
+        repo: openstack/puppet-octavia
+    version: 10.4.0
