--- a/deliverables/ocata/puppet-openstack_extras.yaml
+++ b/deliverables/ocata/puppet-openstack_extras.yaml
@@ -28,3 +28,7 @@ releases:
     projects:
       - repo: openstack/puppet-openstack_extras
         hash: 84a1dfea27a0aeb8e78087024f54aff261ff7780
+  - projects:
+      - hash: 122952c070e44ece2c551afea42f6216e1dcb2ca
+        repo: openstack/puppet-openstack_extras
+    version: 10.4.0
