--- a/deliverables/ocata/puppet-openstacklib.yaml
+++ b/deliverables/ocata/puppet-openstacklib.yaml
@@ -28,3 +28,7 @@ releases:
     projects:
       - repo: openstack/puppet-openstacklib
         hash: 134c737cfd74f30dbee2170172c844e6a9e53cb6
+  - projects:
+      - hash: 15b745622de6a29dee72667f91518e2512dac645
+        repo: openstack/puppet-openstacklib
+    version: 10.5.0
