--- a/deliverables/ocata/puppet-swift.yaml
+++ b/deliverables/ocata/puppet-swift.yaml
@@ -28,3 +28,7 @@ releases:
     projects:
       - repo: openstack/puppet-swift
         hash: d8dd76985e86c824d25daf03a7c4c780c9aa998e
+  - projects:
+      - hash: 97f9e722bed33f527521c8fee335e1b1f6a6da28
+        repo: openstack/puppet-swift
+    version: 10.4.0
