--- a/deliverables/ocata/puppet-tacker.yaml
+++ b/deliverables/ocata/puppet-tacker.yaml
@@ -16,3 +16,7 @@ releases:
     projects:
       - repo: openstack/puppet-tacker
         hash: dae2334bda046dc32eff368bc3009b8be2af59d7
+  - projects:
+      - hash: 13fe0d15c0dfbde0925e57509c80e2081ebfedb2
+        repo: openstack/puppet-tacker
+    version: 10.4.0
