--- a/deliverables/ocata/puppet-tempest.yaml
+++ b/deliverables/ocata/puppet-tempest.yaml
@@ -28,3 +28,7 @@ releases:
     projects:
       - repo: openstack/puppet-tempest
         hash: 85645be3f87569e7f68ce6fdecaf754f306f609b
+  - projects:
+      - hash: 2d1ce59fe6a660f778a281ccddad77d008b665c7
+        repo: openstack/puppet-tempest
+    version: 10.4.0
