--- a/deliverables/ocata/puppet-trove.yaml
+++ b/deliverables/ocata/puppet-trove.yaml
@@ -28,3 +28,7 @@ releases:
     projects:
       - repo: openstack/puppet-trove
         hash: a7d64a85cd59db6d75ff660fac214be49d9efb9b
+  - projects:
+      - hash: f05f4518189c2b00e5659176e3dc2ba9c3cdf699
+        repo: openstack/puppet-trove
+    version: 10.4.0
