--- a/deliverables/ocata/puppet-vswitch.yaml
+++ b/deliverables/ocata/puppet-vswitch.yaml
@@ -28,3 +28,7 @@ releases:
     projects:
       - repo: openstack/puppet-vswitch
         hash: bbb7383e312ad61982a13a2af2b3ef812eeff54b
+  - projects:
+      - hash: ed699b98c32952b2c1afe51837a42b9b746f0781
+        repo: openstack/puppet-vswitch
+    version: 6.4.0
