--- a/deliverables/ocata/puppet-watcher.yaml
+++ b/deliverables/ocata/puppet-watcher.yaml
@@ -28,3 +28,7 @@ releases:
     projects:
       - repo: openstack/puppet-watcher
         hash: 571d41a8a72661b3bd57a9f13a3302e77de5d2e7
+  - projects:
+      - hash: 2c09e6aad26b86270f2349914681b515fa366483
+        repo: openstack/puppet-watcher
+    version: 10.4.0
