--- a/deliverables/ocata/puppet-zaqar.yaml
+++ b/deliverables/ocata/puppet-zaqar.yaml
@@ -28,3 +28,7 @@ releases:
     projects:
       - repo: openstack/puppet-zaqar
         hash: 841539738ae4704214e92775954abd9dfbe186e7
+  - projects:
+      - hash: 7ec480cb8f241fe277c0c23603299048843a63d6
+        repo: openstack/puppet-zaqar
+    version: 10.4.0
