--- a/deliverables/ocata/puppet-ec2api.yaml
+++ b/deliverables/ocata/puppet-ec2api.yaml
@@ -28,3 +28,7 @@ releases:
     projects:
       - repo: openstack/puppet-ec2api
         hash: 28a8c2671e2041b445a14064f87faeb5fee2f738
+  - projects:
+      - hash: 038a2aa06a6f0f25f4f21890c50ca1cc917d503e
+        repo: openstack/puppet-ec2api
+    version: 10.4.0
