--- a/deliverables/ocata/puppet-manila.yaml
+++ b/deliverables/ocata/puppet-manila.yaml
@@ -28,3 +28,7 @@ releases:
     projects:
       - repo: openstack/puppet-manila
         hash: 6f77e846af4673f7c0242505673c554675ea35a5
+  - projects:
+      - hash: 304cb8c691215ecf97385da5cabbfd748dacc609
+        repo: openstack/puppet-manila
+    version: 10.4.0
