--- a/deliverables/ocata/puppet-ovn.yaml
+++ b/deliverables/ocata/puppet-ovn.yaml
@@ -32,3 +32,7 @@ releases:
     projects:
       - repo: openstack/puppet-ovn
         hash: 2caac0cf5a47f411835386769d1cabb50be67a33
+  - projects:
+      - hash: 7f2554f73d9437ed38acaebf6e6d4c28994e8439
+        repo: openstack/puppet-ovn
+    version: 10.5.0
