--- a/deliverables/ocata/puppet-panko.yaml
+++ b/deliverables/ocata/puppet-panko.yaml
@@ -20,3 +20,7 @@ releases:
     projects:
       - repo: openstack/puppet-panko
         hash: 39c49094947ace2577e4e6b3d692ab9193e2466c
+  - projects:
+      - hash: 1390359fd5ba084db1b317f74ce667964e2b6c5b
+        repo: openstack/puppet-panko
+    version: 10.4.0
