--- a/deliverables/ocata/puppet-sahara.yaml
+++ b/deliverables/ocata/puppet-sahara.yaml
@@ -28,3 +28,7 @@ releases:
     projects:
       - repo: openstack/puppet-sahara
         hash: 64b652aa2c279290fa4b2fd6a178e5ca3c0592f3
+  - projects:
+      - hash: 2014de0d6958f441555fe8aadc69010e8b62ccf8
+        repo: openstack/puppet-sahara
+    version: 10.4.0
