Puppet OpenStack pike release
Change-Id: Ia804e05ded7013e25bbccc8462c13f37260843b2

--- a/deliverables/pike/puppet-cinder.yaml
+++ b/deliverables/pike/puppet-cinder.yaml
@@ -22,6 +22,10 @@ releases:
       - hash: fcbe48a6ea3363990848ef884fc93f6bc3f55d4e
         repo: openstack/puppet-cinder
     version: 11.4.0
+  - projects:
+      - hash: b631086cd269a1456daad1673226ed35eae37414
+        repo: openstack/puppet-cinder
+    version: 11.5.0
 team: 'Puppet OpenStack'
 type: other
 branches:
