--- a/deliverables/pike/puppet-designate.yaml
+++ b/deliverables/pike/puppet-designate.yaml
@@ -22,6 +22,10 @@ releases:
       - hash: 3a3017f2959ed9b1dfc20f68bafe3141602c6e4c
         repo: openstack/puppet-designate
     version: 11.3.1
+  - projects:
+      - hash: 9580e26e2193c175870f003b01eff837af72eef5
+        repo: openstack/puppet-designate
+    version: 11.4.0
 team: 'Puppet OpenStack'
 type: other
 branches:
