--- a/deliverables/pike/puppet-ec2api.yaml
+++ b/deliverables/pike/puppet-ec2api.yaml
@@ -22,6 +22,10 @@ releases:
       - hash: 124ff44782b6d57671bc52664a2c1dd3efeb5bc4
         repo: openstack/puppet-ec2api
     version: 11.3.1
+  - projects:
+      - hash: 051cb2f31a79b3daa2d42cf657e4c173085c2c02
+        repo: openstack/puppet-ec2api
+    version: 11.4.0
 team: 'Puppet OpenStack'
 type: other
 branches:
