--- a/deliverables/pike/puppet-glance.yaml
+++ b/deliverables/pike/puppet-glance.yaml
@@ -22,6 +22,10 @@ releases:
       - hash: 7a8bcc32bba6ff1962159e48bb7fa196d4a99c89
         repo: openstack/puppet-glance
     version: 11.4.0
+  - projects:
+      - hash: 2b8c39496349ee7a5b131fc28d98960a10a507c5
+        repo: openstack/puppet-glance
+    version: 11.5.0
 team: 'Puppet OpenStack'
 type: other
 branches:
