--- a/deliverables/pike/puppet-gnocchi.yaml
+++ b/deliverables/pike/puppet-gnocchi.yaml
@@ -22,6 +22,10 @@ releases:
       - hash: b64ae2f3b970b256454419bc79694bc66f0090a5
         repo: openstack/puppet-gnocchi
     version: 11.4.0
+  - projects:
+      - hash: b718c2ab30c1588b45cc6bc12cc215287d6aa3d8
+        repo: openstack/puppet-gnocchi
+    version: 11.5.0
 team: 'Puppet OpenStack'
 type: other
 branches:
