--- a/deliverables/pike/puppet-horizon.yaml
+++ b/deliverables/pike/puppet-horizon.yaml
@@ -26,6 +26,10 @@ releases:
       - hash: 0d25b341a1d1c7afe55c35aceb03bdbed5c4d9e8
         repo: openstack/puppet-horizon
     version: 11.4.1
+  - projects:
+      - hash: d75706e38fdf63f9c3174a526a7d07799390dfeb
+        repo: openstack/puppet-horizon
+    version: 11.5.0
 team: 'Puppet OpenStack'
 type: other
 branches:
