--- a/deliverables/pike/puppet-ironic.yaml
+++ b/deliverables/pike/puppet-ironic.yaml
@@ -22,6 +22,10 @@ releases:
       - hash: 34b1d3504b41a50244894f8dbbd0b9e796997a44
         repo: openstack/puppet-ironic
     version: 11.4.0
+  - projects:
+      - hash: 46f5abc49d866a8cde011a70fa0933bd44b8a5b4
+        repo: openstack/puppet-ironic
+    version: 11.5.0
 team: 'Puppet OpenStack'
 type: other
 branches:
