--- a/deliverables/pike/puppet-keystone.yaml
+++ b/deliverables/pike/puppet-keystone.yaml
@@ -22,6 +22,10 @@ releases:
       - hash: b0df3f23303320a33c4672316c4f3469e3fdb182
         repo: openstack/puppet-keystone
     version: 11.3.1
+  - projects:
+      - hash: dde64efdd8925f68cc672feb7b7a5243ed221895
+        repo: openstack/puppet-keystone
+    version: 11.4.0
 team: 'Puppet OpenStack'
 type: other
 branches:
