--- a/deliverables/pike/puppet-mistral.yaml
+++ b/deliverables/pike/puppet-mistral.yaml
@@ -22,6 +22,10 @@ releases:
       - hash: 71f28bdd8d030137ee02353ea1d5cdbc7a60a60d
         repo: openstack/puppet-mistral
     version: 11.3.1
+  - projects:
+      - hash: b454433dadea5a7002548bcf95d2abe24fbb384a
+        repo: openstack/puppet-mistral
+    version: 11.4.0
 team: 'Puppet OpenStack'
 type: other
 branches:
