--- a/deliverables/pike/puppet-murano.yaml
+++ b/deliverables/pike/puppet-murano.yaml
@@ -26,6 +26,10 @@ releases:
       - hash: 76e9691261f2129966052b5d85a2c6872dd833de
         repo: openstack/puppet-murano
     version: 11.3.2
+  - projects:
+      - hash: d6ef98d2c4ee69fd39243ab5d75b9d96505472b8
+        repo: openstack/puppet-murano
+    version: 11.4.0
 team: 'Puppet OpenStack'
 type: other
 branches:
