--- a/deliverables/pike/puppet-neutron.yaml
+++ b/deliverables/pike/puppet-neutron.yaml
@@ -22,6 +22,10 @@ releases:
       - hash: 96e5d9a96f61ab53f989a850444b96db76d07417
         repo: openstack/puppet-neutron
     version: 11.4.0
+  - projects:
+      - hash: 27c21b0060b84bd727b38f2b1c9979aa013a58cc
+        repo: openstack/puppet-neutron
+    version: 11.5.0
 team: 'Puppet OpenStack'
 type: other
 branches:
