--- a/deliverables/pike/puppet-nova.yaml
+++ b/deliverables/pike/puppet-nova.yaml
@@ -26,6 +26,10 @@ releases:
       - hash: 366597f2ff86689fbf3d6cfa3599658dd2c8c6a5
         repo: openstack/puppet-nova
     version: 11.4.1
+  - projects:
+      - hash: a2625fca791cf24eed96aac63438e64849da2b5c
+        repo: openstack/puppet-nova
+    version: 11.5.0
 team: 'Puppet OpenStack'
 type: other
 branches:
