--- a/deliverables/pike/puppet-octavia.yaml
+++ b/deliverables/pike/puppet-octavia.yaml
@@ -22,6 +22,10 @@ releases:
       - hash: 0b18cbd94d971db0d9bcb297d02beb0ae3ba5bc3
         repo: openstack/puppet-octavia
     version: 11.4.0
+  - projects:
+      - hash: cf684967a628218f2a8a20bc8851cb3ebf1a2689
+        repo: openstack/puppet-octavia
+    version: 11.5.0
 team: 'Puppet OpenStack'
 type: other
 branches:
