--- a/deliverables/pike/puppet-openstack_extras.yaml
+++ b/deliverables/pike/puppet-openstack_extras.yaml
@@ -22,6 +22,10 @@ releases:
       - hash: baf8331a1ace582d9adf94bf7cbc2633c080cc90
         repo: openstack/puppet-openstack_extras
     version: 11.4.0
+  - projects:
+      - hash: 8e9f1dac8fbf0fe51d94d1889fa39ed7212e28fe
+        repo: openstack/puppet-openstack_extras
+    version: 11.5.0
 team: 'Puppet OpenStack'
 type: other
 branches:
