--- a/deliverables/pike/puppet-openstacklib.yaml
+++ b/deliverables/pike/puppet-openstacklib.yaml
@@ -22,6 +22,10 @@ releases:
       - hash: 9ebb0e395f8339220d6b0269d1d6dc94acdbe553
         repo: openstack/puppet-openstacklib
     version: 11.4.0
+  - projects:
+      - hash: 8abcbe2a39b06477ac6d24210470684553fe1b60
+        repo: openstack/puppet-openstacklib
+    version: 11.5.0
 team: 'Puppet OpenStack'
 type: other
 branches:
