--- a/deliverables/pike/puppet-oslo.yaml
+++ b/deliverables/pike/puppet-oslo.yaml
@@ -22,6 +22,10 @@ releases:
       - hash: aef65a146d20cbcda31940dd57ef44f23b33970b
         repo: openstack/puppet-oslo
     version: 11.3.1
+  - projects:
+      - hash: 4789fb234d81fda9198f43bfcc2d950e2839e252
+        repo: openstack/puppet-oslo
+    version: 11.4.0
 team: 'Puppet OpenStack'
 type: other
 branches:
