--- a/deliverables/pike/puppet-ovn.yaml
+++ b/deliverables/pike/puppet-ovn.yaml
@@ -22,6 +22,10 @@ releases:
       - hash: 69361c7d7d88eca58e93a1ba7b88b488eafc6d05
         repo: openstack/puppet-ovn
     version: 11.3.1
+  - projects:
+      - hash: ea55226cce2494f2faf3e74032ac201c5f6dd67e
+        repo: openstack/puppet-ovn
+    version: 11.4.0
 team: 'Puppet OpenStack'
 type: other
 branches:
