--- a/deliverables/pike/puppet-sahara.yaml
+++ b/deliverables/pike/puppet-sahara.yaml
@@ -22,6 +22,10 @@ releases:
       - hash: 2c50796bb3cbb613a0a33d47d8f53020bc54659c
         repo: openstack/puppet-sahara
     version: 11.3.1
+  - projects:
+      - hash: 62fd414077f89a410a8fc63482957321509368e7
+        repo: openstack/puppet-sahara
+    version: 11.4.0
 team: 'Puppet OpenStack'
 type: other
 branches:
