--- a/deliverables/pike/puppet-swift.yaml
+++ b/deliverables/pike/puppet-swift.yaml
@@ -22,6 +22,10 @@ releases:
       - hash: cbb4ca1f095bfe89ae0b412f64599272d172ed33
         repo: openstack/puppet-swift
     version: 11.3.1
+  - projects:
+      - hash: 239175cf8ddc997d1c10e97965ada06fa22cbf74
+        repo: openstack/puppet-swift
+    version: 11.4.0
 team: 'Puppet OpenStack'
 type: other
 branches:
