--- a/deliverables/pike/puppet-tacker.yaml
+++ b/deliverables/pike/puppet-tacker.yaml
@@ -22,6 +22,10 @@ releases:
       - hash: d47b29c509f22392f2e8ae8d160ec2d64e340eed
         repo: openstack/puppet-tacker
     version: 11.3.1
+  - projects:
+      - hash: d896981e34d013d5703fd18f5b7de777f22a4776
+        repo: openstack/puppet-tacker
+    version: 11.4.0
 team: 'Puppet OpenStack'
 type: other
 branches:
