--- a/deliverables/pike/puppet-tempest.yaml
+++ b/deliverables/pike/puppet-tempest.yaml
@@ -22,6 +22,10 @@ releases:
       - hash: 2a6ae29cc80fb9fbb879b78211c6b5a505b9d3e3
         repo: openstack/puppet-tempest
     version: 11.4.0
+  - projects:
+      - hash: f44fb1f589b91fe9bff0e66994523712db54d448
+        repo: openstack/puppet-tempest
+    version: 11.5.0
 team: 'Puppet OpenStack'
 type: other
 branches:
