--- a/deliverables/pike/puppet-vswitch.yaml
+++ b/deliverables/pike/puppet-vswitch.yaml
@@ -22,6 +22,10 @@ releases:
       - hash: 5df30ae29f5464069db7516d237aa6e03882e41d
         repo: openstack/puppet-vswitch
     version: 7.3.1
+  - projects:
+      - hash: aeaef734aa874fe72dcb878bbe86b61f4a6bb9f8
+        repo: openstack/puppet-vswitch
+    version: 7.4.0
 team: 'Puppet OpenStack'
 type: other
 branches:
