--- a/deliverables/pike/puppet-barbican.yaml
+++ b/deliverables/pike/puppet-barbican.yaml
@@ -22,6 +22,10 @@ releases:
       - hash: 7ed4cbb2f9e3fe6a9813348d1803e53ad189b5a7
         repo: openstack/puppet-barbican
     version: 11.3.1
+  - projects:
+      - hash: cbd67f3a5f795a76fcab855b53239c1cc99d7ec6
+        repo: openstack/puppet-barbican
+    version: 11.4.0
 team: 'Puppet OpenStack'
 type: other
 branches:
