--- a/deliverables/pike/puppet-ceilometer.yaml
+++ b/deliverables/pike/puppet-ceilometer.yaml
@@ -22,6 +22,10 @@ releases:
       - hash: 1e99913efb24a4dcd00d3abb89649791cdc7d753
         repo: openstack/puppet-ceilometer
     version: 11.4.0
+  - projects:
+      - hash: 8d5ff096d603744e30e7dfee3451a2b9461735cf
+        repo: openstack/puppet-ceilometer
+    version: 11.5.0
 team: 'Puppet OpenStack'
 type: other
 branches:
