--- a/deliverables/pike/puppet-congress.yaml
+++ b/deliverables/pike/puppet-congress.yaml
@@ -22,6 +22,10 @@ releases:
       - hash: 8b88bf0052cb863b24e60e3575b8b2387535a847
         repo: openstack/puppet-congress
     version: 11.3.1
+  - projects:
+      - hash: a004ab9eeb0598e3dd2d1a3b6ce9c0af5ff19a40
+        repo: openstack/puppet-congress
+    version: 11.4.0
 team: 'Puppet OpenStack'
 type: other
 branches:
