--- a/deliverables/pike/puppet-heat.yaml
+++ b/deliverables/pike/puppet-heat.yaml
@@ -22,6 +22,10 @@ releases:
       - hash: fb56f6aa51016bf5e89b4450feb7aa863b0c58ee
         repo: openstack/puppet-heat
     version: 11.4.0
+  - projects:
+      - hash: a39fec571cc46a8832b7e5c6ac487c46c034dac4
+        repo: openstack/puppet-heat
+    version: 11.5.0
 team: 'Puppet OpenStack'
 type: other
 branches:
