--- a/deliverables/pike/puppet-manila.yaml
+++ b/deliverables/pike/puppet-manila.yaml
@@ -22,6 +22,10 @@ releases:
       - hash: 5f2b4d892d3a6e7ab96781de8a1869d24d772d13
         repo: openstack/puppet-manila
     version: 11.3.1
+  - projects:
+      - hash: 0ed53c9df1dcb0e3c2a743e01b6bb040f3aaaaf8
+        repo: openstack/puppet-manila
+    version: 11.4.0
 team: 'Puppet OpenStack'
 type: other
 branches:
