--- a/deliverables/pike/puppet-panko.yaml
+++ b/deliverables/pike/puppet-panko.yaml
@@ -22,6 +22,10 @@ releases:
       - hash: 29d6a8e4da44f3eeb4db7ef60197e2d01745a6eb
         repo: openstack/puppet-panko
     version: 11.4.0
+  - projects:
+      - hash: 026182de717701295b903fb63c908e93ab39fa1c
+        repo: openstack/puppet-panko
+    version: 11.5.0
 team: 'Puppet OpenStack'
 type: other
 branches:
