--- a/deliverables/pike/puppet-trove.yaml
+++ b/deliverables/pike/puppet-trove.yaml
@@ -22,6 +22,10 @@ releases:
       - hash: 55b06aabe08077f30ac251f498f5269109a177ac
         repo: openstack/puppet-trove
     version: 11.3.1
+  - projects:
+      - hash: c18a5bffbef0a5f291941e9fe214ca9d59f0f8ef
+        repo: openstack/puppet-trove
+    version: 11.4.0
 team: 'Puppet OpenStack'
 type: other
 branches:
