--- a/deliverables/pike/puppet-zaqar.yaml
+++ b/deliverables/pike/puppet-zaqar.yaml
@@ -22,6 +22,10 @@ releases:
       - hash: eb1bca9a09c81f961669db7d92d723cfbff84a52
         repo: openstack/puppet-zaqar
     version: 11.3.1
+  - projects:
+      - hash: b938300de2636761f47743eca7b6fc0222c8a2af
+        repo: openstack/puppet-zaqar
+    version: 11.4.0
 team: 'Puppet OpenStack'
 type: other
 branches:
