--- a/deliverables/queens/os-brick.yaml
+++ b/deliverables/queens/os-brick.yaml
@@ -21,3 +21,7 @@ releases:
       - hash: effd16e33e593e94b653b47bf1045250a6bf8dfd
         repo: openstack/os-brick
     version: 2.2.0
+  - projects:
+      - hash: 7dd2076a98acaca2ef70bb0a8d231a368b30c644
+        repo: openstack/os-brick
+    version: 2.3.0
