--- a/deliverables/queens/keystoneauth.yaml
+++ b/deliverables/queens/keystoneauth.yaml
@@ -13,5 +13,10 @@ releases:
         repo: openstack/keystoneauth
         tarball-base: keystoneauth1
     version: 3.3.0
+  - projects:
+      - hash: d4a552c2f3bede6efa7a145eb1b523ec9e0bd0ac
+        repo: openstack/keystoneauth
+        tarball-base: keystoneauth1
+    version: 3.4.0
 team: keystone
 type: library
