Create stable/queens branches for non-client libs
Change-Id: I3719f07d64428df309eb314387499c7fe2a5ec07

--- a/deliverables/queens/automaton.yaml
+++ b/deliverables/queens/automaton.yaml
@@ -17,3 +17,6 @@ releases:
       - hash: 90f3ed251084952b43b89a172895a005182e6970
         repo: openstack/automaton
     version: 1.14.0
+branches:
+  - name: stable/queens
+    location: 1.14.0
