--- a/deliverables/queens/castellan.yaml
+++ b/deliverables/queens/castellan.yaml
@@ -32,3 +32,6 @@ releases:
       - hash: 8e2929b8779eaa03f15a25da5cf64ef8539a026b
         repo: openstack/castellan
     version: 0.17.0
+branches:
+  - name: stable/queens
+    location: 0.17.0
