--- a/deliverables/queens/cliff.yaml
+++ b/deliverables/queens/cliff.yaml
@@ -21,3 +21,6 @@ releases:
       - hash: 134ebd4a9a5d981f3bccf4f074adc63f1df72f80
         repo: openstack/cliff
     version: 2.11.0
+branches:
+  - name: stable/queens
+    location: 2.11.0
