--- a/deliverables/queens/debtcollector.yaml
+++ b/deliverables/queens/debtcollector.yaml
@@ -13,3 +13,6 @@ releases:
       - hash: e1271aaa9785c72ea67961c58ea9a17b64eb7b3f
         repo: openstack/debtcollector
     version: 1.19.0
+branches:
+  - name: stable/queens
+    location: 1.19.0
