--- a/deliverables/queens/futurist.yaml
+++ b/deliverables/queens/futurist.yaml
@@ -17,3 +17,6 @@ releases:
       - hash: 8fff2242ff53735255247a1b126727e374fe9159
         repo: openstack/futurist
     version: 1.6.0
+branches:
+  - name: stable/queens
+    location: 1.6.0
