--- a/deliverables/queens/glance-store.yaml
+++ b/deliverables/queens/glance-store.yaml
@@ -9,3 +9,6 @@ releases:
     projects:
       - repo: openstack/glance_store
         hash: 38d9bcb2aa374690bb83806457258cb6d3883af9
+branches:
+  - name: stable/queens
+    location: 0.23.0
