--- a/deliverables/queens/neutron-lib.yaml
+++ b/deliverables/queens/neutron-lib.yaml
@@ -63,3 +63,6 @@ releases:
         * Rehomed router service type API definition
         * Adopt to new oslo.context code to remove deprecation warnings
         * Add events and resources for L3 flavors
+branches:
+  - name: stable/queens
+    location: 1.13.0
