--- a/deliverables/queens/os-brick.yaml
+++ b/deliverables/queens/os-brick.yaml
@@ -25,3 +25,6 @@ releases:
       - hash: 7dd2076a98acaca2ef70bb0a8d231a368b30c644
         repo: openstack/os-brick
     version: 2.3.0
+branches:
+  - name: stable/queens
+    location: 2.3.0
