--- a/deliverables/queens/osc-lib.yaml
+++ b/deliverables/queens/osc-lib.yaml
@@ -13,3 +13,6 @@ releases:
       - hash: 281183216b91b1a38b2e42dc2426e182e5cffab1
         repo: openstack/osc-lib
     version: 1.9.0
+branches:
+  - name: stable/queens
+    location: 1.9.0
