--- a/deliverables/queens/oslo.cache.yaml
+++ b/deliverables/queens/oslo.cache.yaml
@@ -17,3 +17,6 @@ releases:
       - hash: e52c99825cd888c9e7771697e189bfdba8cbe406
         repo: openstack/oslo.cache
     version: 1.28.0
+branches:
+  - name: stable/queens
+    location: 1.28.0
