--- a/deliverables/queens/oslo.concurrency.yaml
+++ b/deliverables/queens/oslo.concurrency.yaml
@@ -21,3 +21,6 @@ releases:
       - hash: 55e06261aa86c87c7c059fbddc97cdbaae06e8dd
         repo: openstack/oslo.concurrency
     version: 3.25.0
+branches:
+  - name: stable/queens
+    location: 3.25.0
