--- a/deliverables/queens/oslo.config.yaml
+++ b/deliverables/queens/oslo.config.yaml
@@ -35,3 +35,6 @@ releases:
       - hash: 557861692fffb9af032caccc37c84a0189ebbf83
         repo: openstack/oslo.config
     version: 5.2.0
+branches:
+  - name: stable/queens
+    location: 5.2.0
