--- a/deliverables/queens/oslo.context.yaml
+++ b/deliverables/queens/oslo.context.yaml
@@ -33,3 +33,6 @@ releases:
       - hash: bfdeba62be37cb0f175e9abbefe750591be0f16d
         repo: openstack/oslo.context
     version: 2.20.0
+branches:
+  - name: stable/queens
+    location: 2.20.0
