--- a/deliverables/queens/oslo.db.yaml
+++ b/deliverables/queens/oslo.db.yaml
@@ -37,3 +37,6 @@ releases:
       - hash: ea1ec64274475465f35d68b93dc95b643a51830a
         repo: openstack/oslo.db
     version: 4.33.0
+branches:
+  - name: stable/queens
+    location: 4.33.0
