--- a/deliverables/queens/oslo.log.yaml
+++ b/deliverables/queens/oslo.log.yaml
@@ -29,3 +29,6 @@ releases:
       - hash: e29dc73e9eaf009e7fccd17dcb96abdaf787efe7
         repo: openstack/oslo.log
     version: 3.36.0
+branches:
+  - name: stable/queens
+    location: 3.36.0
