--- a/deliverables/queens/oslo.messaging.yaml
+++ b/deliverables/queens/oslo.messaging.yaml
@@ -33,3 +33,6 @@ releases:
       - hash: 1ccdccddaa838a4715fd21e8eb67e207d172c240
         repo: openstack/oslo.messaging
     version: 5.35.0
+branches:
+  - name: stable/queens
+    location: 5.35.0
