--- a/deliverables/queens/oslo.middleware.yaml
+++ b/deliverables/queens/oslo.middleware.yaml
@@ -25,3 +25,6 @@ releases:
       - hash: abfd726a52bc5ac85083bac79cf905d4d8d2c903
         repo: openstack/oslo.middleware
     version: 3.34.0
+branches:
+  - name: stable/queens
+    location: 3.34.0
