--- a/deliverables/queens/oslo.policy.yaml
+++ b/deliverables/queens/oslo.policy.yaml
@@ -53,3 +53,6 @@ releases:
       - hash: 4f68708a495fa2237b62491e355db99fac1f7edb
         repo: openstack/oslo.policy
     version: 1.33.1
+branches:
+  - name: stable/queens
+    location: 1.33.1
