--- a/deliverables/queens/oslo.privsep.yaml
+++ b/deliverables/queens/oslo.privsep.yaml
@@ -21,3 +21,6 @@ releases:
       - hash: aa882953db2ce475402988eeb9572c69a84bd030
         repo: openstack/oslo.privsep
     version: 1.26.0
+branches:
+  - name: stable/queens
+    location: 1.26.0
