--- a/deliverables/queens/oslo.serialization.yaml
+++ b/deliverables/queens/oslo.serialization.yaml
@@ -25,3 +25,6 @@ releases:
       - hash: 9ac1d6b3e73f8b418f4bd0ef40405a71d17ec106
         repo: openstack/oslo.serialization
     version: 2.23.0
+branches:
+  - name: stable/queens
+    location: 2.23.0
