--- a/deliverables/queens/oslo.service.yaml
+++ b/deliverables/queens/oslo.service.yaml
@@ -25,3 +25,6 @@ releases:
       - hash: e753070ca2ac1b36d798b7c23b120531c68d0e9a
         repo: openstack/oslo.service
     version: 1.29.0
+branches:
+  - name: stable/queens
+    location: 1.29.0
