--- a/deliverables/queens/oslo.utils.yaml
+++ b/deliverables/queens/oslo.utils.yaml
@@ -35,3 +35,6 @@ releases:
       - hash: a449545a196c6940e56fd1e319b96f85f588ba0d
         repo: openstack/oslo.utils
     version: 3.35.0
+branches:
+  - name: stable/queens
+    location: 3.35.0
