--- a/deliverables/queens/oslo.versionedobjects.yaml
+++ b/deliverables/queens/oslo.versionedobjects.yaml
@@ -29,3 +29,6 @@ releases:
       - hash: 3eefca693eab8b313d17d528bef544035b1707b4
         repo: openstack/oslo.versionedobjects
     version: 1.31.1
+branches:
+  - name: stable/queens
+    location: 1.31.1
