--- a/deliverables/queens/oslo.vmware.yaml
+++ b/deliverables/queens/oslo.vmware.yaml
@@ -17,3 +17,6 @@ releases:
       - hash: 200706ed0ea56af48517442172f194cda6fa239e
         repo: openstack/oslo.vmware
     version: 2.26.0
+branches:
+  - name: stable/queens
+    location: 2.26.0
