--- a/deliverables/queens/oslosphinx.yaml
+++ b/deliverables/queens/oslosphinx.yaml
@@ -17,3 +17,6 @@ releases:
       - hash: 1de073c3d2323aba6c9070da872482f2ed1f6b75
         repo: openstack/oslosphinx
     version: 4.18.0
+branches:
+  - name: stable/queens
+    location: 4.18.0
