--- a/deliverables/queens/osprofiler.yaml
+++ b/deliverables/queens/osprofiler.yaml
@@ -25,3 +25,6 @@ releases:
       - hash: 0895a4bb91beb0b97ed3711887f28d3e9dc8b9de
         repo: openstack/osprofiler
     version: 1.15.1
+branches:
+  - name: stable/queens
+    location: 1.15.1
