--- a/deliverables/queens/sahara-extra.yaml
+++ b/deliverables/queens/sahara-extra.yaml
@@ -8,3 +8,6 @@ releases:
     projects:
       - repo: openstack/sahara-extra
         hash: dd99413cd308883fe0283282515737cee1fce7ae
+branches:
+  - name: stable/queens
+    location: 8.0.0
