--- a/deliverables/queens/shade.yaml
+++ b/deliverables/queens/shade.yaml
@@ -33,3 +33,6 @@ releases:
       - hash: d8d0fca288b5da8f27096e474ff6b52095fa69cb
         repo: openstack-infra/shade
     version: 1.26.0
+branches:
+  - name: stable/queens
+    location: 1.26.0
