--- a/deliverables/queens/stevedore.yaml
+++ b/deliverables/queens/stevedore.yaml
@@ -21,3 +21,6 @@ releases:
       - hash: 2472e8c9c27affe95c1541971a677a107a0d6ad4
         repo: openstack/stevedore
     version: 1.28.0
+branches:
+  - name: stable/queens
+    location: 1.28.0
