--- a/deliverables/queens/taskflow.yaml
+++ b/deliverables/queens/taskflow.yaml
@@ -29,3 +29,6 @@ releases:
       - hash: c4ce1ab56cbbd8e7f2962e9578b19059244c825f
         repo: openstack/taskflow
     version: 3.1.0
+branches:
+  - name: stable/queens
+    location: 3.1.0
