--- a/deliverables/queens/instack.yaml
+++ b/deliverables/queens/instack.yaml
@@ -13,3 +13,6 @@ releases:
       - hash: d71921cd87e5a7bdd85bb218c8f7b0c5654a0b01
         repo: openstack/instack
     version: 8.1.0
+branches:
+  - name: stable/queens
+    location: 8.1.0
