--- a/deliverables/queens/mox3.yaml
+++ b/deliverables/queens/mox3.yaml
@@ -9,3 +9,6 @@ releases:
       - hash: 9f2bbc229c6894c0804b6c8da1f1a6fedc986938
         repo: openstack/mox3
     version: 0.24.0
+branches:
+  - name: stable/queens
+    location: 0.24.0
