--- a/deliverables/queens/os-traits.yaml
+++ b/deliverables/queens/os-traits.yaml
@@ -16,3 +16,6 @@ releases:
     projects:
       - repo: openstack/os-traits
         hash: e0a3a6ef1e36fb8a62970050959d33676cf41bc1
+branches:
+  - name: stable/queens
+    location: 0.5.0
