--- a/deliverables/queens/oslo.i18n.yaml
+++ b/deliverables/queens/oslo.i18n.yaml
@@ -13,3 +13,6 @@ releases:
       - hash: 79e468edacd717a69f5c279ffab80f3163b6b4e7
         repo: openstack/oslo.i18n
     version: 3.19.0
+branches:
+  - name: stable/queens
+    location: 3.19.0
