--- a/deliverables/queens/oslo.reports.yaml
+++ b/deliverables/queens/oslo.reports.yaml
@@ -21,3 +21,6 @@ releases:
       - hash: c7ac43b0ead276621029160ac7630a5bf8ef217c
         repo: openstack/oslo.reports
     version: 1.26.0
+branches:
+  - name: stable/queens
+    location: 1.26.0
