--- a/deliverables/queens/oslo.rootwrap.yaml
+++ b/deliverables/queens/oslo.rootwrap.yaml
@@ -25,3 +25,6 @@ releases:
       - hash: 68a64928ab46d960dc6ea8c9c48d850b4774891d
         repo: openstack/oslo.rootwrap
     version: 5.13.0
+branches:
+  - name: stable/queens
+    location: 5.13.0
