--- a/deliverables/queens/oslotest.yaml
+++ b/deliverables/queens/oslotest.yaml
@@ -29,3 +29,6 @@ releases:
     version: 3.2.0
     highlights: |
       Adds oslotest.mock_fixture module
+branches:
+  - name: stable/queens
+    location: 3.2.0
