--- a/deliverables/queens/ovsdbapp.yaml
+++ b/deliverables/queens/ovsdbapp.yaml
@@ -24,3 +24,6 @@ releases:
     projects:
       - repo: openstack/ovsdbapp
         hash: 7d4b4b6d7943aac4f4ed89a5e6d2c30d9b9de887
+branches:
+  - name: stable/queens
+    location: 0.9.0
