--- a/deliverables/queens/tooz.yaml
+++ b/deliverables/queens/tooz.yaml
@@ -9,3 +9,6 @@ releases:
       - hash: 29ec8eb26addf83877be54ff9ea90e6873043620
         repo: openstack/tooz
     version: 1.59.0
+branches:
+  - name: stable/queens
+    location: 1.59.0
