--- a/deliverables/pike/panko.yaml
+++ b/deliverables/pike/panko.yaml
@@ -10,6 +10,10 @@ releases:
       - hash: 7f811a3fa915f1d18cbc817e892957324183761a
         repo: openstack/panko
     version: 3.0.0
+  - projects:
+      - hash: f335d59a3b2919e41594ff2499cf83e6d327ef3f
+        repo: openstack/panko
+    version: 3.1.0
 branches:
   - location: 3.0.0
     name: stable/pike
