--- a/deliverables/queens/os-win.yaml
+++ b/deliverables/queens/os-win.yaml
@@ -17,6 +17,10 @@ releases:
     projects:
       - repo: openstack/os-win
         hash: 204156f69d580e1ddbf3359b3995d2b9f9b76444
+  - version: 3.0.1
+    projects:
+      - repo: openstack/os-win
+        hash: 99f1150a9c617137dde39a824736b3a82fb63fbe
 branches:
   - name: stable/queens
     location: 3.0.0
