Queens-3 tag for python-troveclient
Dropping the client changes first. Will follow-up with
tagging the trove and trove-dashboard releases.

Change-Id: I6f26914c0ebc12c92a44169ebffdc34feb076380

--- a/deliverables/queens/python-troveclient.yaml
+++ b/deliverables/queens/python-troveclient.yaml
@@ -9,4 +9,8 @@ releases:
     projects:
       - repo: openstack/python-troveclient
         hash: 1d3e516dea5448f2230354d1457f488b34a2bd4d
+  - version: 2.14.0
+    projects:
+      - repo: openstack/python-troveclient
+        hash: e30e8db7e7e79e6409c22d4ea8c80e0ff5cc4672
 release-notes: https://docs.openstack.org/releasenotes/python-troveclient/unreleased.html
